[metadata]
name = congress
summary = Congress: The open policy framework for the cloud.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/congress/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    congress
    antlr3runtime/Python/antlr3
    antlr3runtime/Python3/antlr3
data_files =
    etc/congress =
        etc/api-paste.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    congress = congress.opts:list_opts
    congress-agent = congress.cfg_validator.agent.opts:list_opts

oslo.config.opts.defaults =
    congress = congress.common.config:set_config_defaults

oslo.policy.policies =
    # With the move of default policy in code list_rules returns a list of
    # the default defined polices.
    congress = congress.common.policies:list_rules

console_scripts =
    congress-server = congress.server.congress_server:main
    congress-db-manage = congress.db.migration.cli:main
    congress-cfg-validator-agt = congress.cfg_validator.agent.agent:main

congress.datasource.drivers =
    aodh = congress.datasources.aodh_driver:AodhDriver
    cinder = congress.datasources.cinder_driver:CinderDriver
    cloudfoundryv2 = congress.datasources.cloudfoundryv2_driver:CloudFoundryV2Driver
    config = congress.datasources.cfgvalidator_driver:ValidatorDriver
    doctor = congress.datasources.doctor_driver:DoctorDriver
    fake_datasource = congress.tests.fake_datasource:FakeDataSource
    glancev2 = congress.datasources.glancev2_driver:GlanceV2Driver
    heat = congress.datasources.heatv1_driver:HeatV1Driver
    ironic = congress.datasources.ironic_driver:IronicDriver
    keystone = congress.datasources.keystone_driver:KeystoneDriver
    keystonev3 = congress.datasources.keystonev3_driver:KeystoneV3Driver
    mistral = congress.datasources.mistral_driver:MistralDriver
    monasca = congress.datasources.monasca_driver:MonascaDriver
    murano = congress.datasources.murano_driver:MuranoDriver
    neutronv2 = congress.datasources.neutronv2_driver:NeutronV2Driver
    neutronv2_qos = congress.datasources.neutronv2_qos_driver:NeutronV2QosDriver
    nova = congress.datasources.nova_driver:NovaDriver
    plexxi = congress.datasources.plexxi_driver:PlexxiDriver
    swift = congress.datasources.swift_driver:SwiftDriver
    vcenter = congress.datasources.vCenter_driver:VCenterDriver
    vitrage = congress.datasources.vitrage_driver:VitrageDriver

[compile_catalog]
directory = congress/locale
domain = congress

[update_catalog]
domain = congress
output_dir = congress/locale
input_file = congress/locale/congress.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = congress/locale/congress.pot
